[gd_scene load_steps=15 format=2]

[ext_resource path="res://Music/Please stand by sound effect.ogg" type="AudioStream" id=1]
[ext_resource path="res://Art/MainMenuBackground.PNG" type="Texture" id=2]
[ext_resource path="res://Music/Curb Your Enthusiasm Theme.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/DeathScene.gd" type="Script" id=4]
[ext_resource path="res://Art/PermanentMarker-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/ButtonStylePressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Art/ButtonStyle.tres" type="StyleBox" id=7]
[ext_resource path="res://Art/ButtonStyleHover.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 5 )

[node name="DeathScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1919.0
margin_bottom = 1082.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]
margin_top = 56.6324
margin_right = 1912.0
margin_bottom = 205.632
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "You Are Dead!"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Information" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
margin_left = 591.0
margin_top = 242.0
margin_right = 1305.0
margin_bottom = 881.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="Label" parent="Information"]
margin_left = 76.3739
margin_top = 393.549
margin_right = 310.374
margin_bottom = 452.549
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Death Count:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathCount" type="Label" parent="Information/Deaths"]
margin_left = 270.0
margin_top = 7.0
margin_right = 572.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Information"]
margin_left = 85.2095
margin_top = 136.734
margin_right = 292.209
margin_bottom = 195.734
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Base Score:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreCount" type="Label" parent="Information/Score"]
margin_left = 301.0
margin_top = 4.0
margin_right = 532.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesDefeated" type="Label" parent="Information"]
margin_left = 61.9405
margin_top = 200.762
margin_right = 269.94
margin_bottom = 273.762
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Enemies Defeated:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesDefeatedCount" type="Label" parent="Information/EnemiesDefeated"]
margin_left = 302.0
margin_top = 26.0
margin_right = 571.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusesCollected" type="Label" parent="Information"]
margin_left = 109.995
margin_top = 316.706
margin_right = 343.995
margin_bottom = 375.706
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Bonuses Collected:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusesCollectedCount" type="Label" parent="Information/BonusesCollected"]
margin_left = 273.0
margin_top = 6.0
margin_right = 526.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0 / 2"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScore" type="Label" parent="Information"]
margin_left = 111.348
margin_top = 494.474
margin_right = 345.347
margin_bottom = 553.474
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Total Score:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScoreCount" type="Label" parent="Information/TotalScore"]
margin_left = 274.0
margin_top = 7.0
margin_right = 522.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubTitle" type="Label" parent="Information"]
margin_left = 231.857
margin_top = 29.1328
margin_right = 438.857
margin_bottom = 88.1328
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Statistics:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
margin_left = 774.525
margin_top = 927.441
margin_right = 1109.53
margin_bottom = 1023.44
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PleaseStandBy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="CurbYourEnthusiasm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
